<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProblem">


    <EditText
        android:id="@+id/message"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:autofillHints="@string/description_hint"
        android:hint="@string/description_hint"
        android:inputType="textCapSentences|textAutoCorrect"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <EditText
        android:id="@+id/location"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:autofillHints="@string/description_location"
        android:hint="@string/description_location"
        android:inputType="textCapSentences|textAutoCorrect"

        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgup"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:text="@string/type_of_the_problem"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.224" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="338dp"
        android:layout_height="26dp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="336dp"
        android:layout_height="206dp"
        android:layout_marginTop="36dp"

        android:contentDescription="@string/upload_button"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/common_google_signin_btn_text_dark_disabled"
        tools:ignore="VectorDrawableCompat"

    />

    <EditText
        android:id="@+id/imagenote"
        android:layout_width="332dp"
        android:layout_height="49dp"
        android:layout_margin="1dp"
        android:gravity="center"
        android:textColor="#000000"
        android:hint="@string/note"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/imgup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_button"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.099" />

</androidx.constraintlayout.widget.ConstraintLayout>